--- a/package.json
+++ b/package.json
@@ -9,30 +9,31 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^6.5.4",
-    "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^1.0.0",
+    "autoprefixer": "^9.4.3",
+    "grunt": "^1.0.3",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.2",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-postcss": "^0.8.0",
-    "grunt-sass": "^2.0.0",
-    "load-grunt-tasks": "^3.5.2"
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-postcss": "^0.9.0",
+    "grunt-sass": "^3.0.2",
+    "node-sass": "^4.11.0",
+    "load-grunt-tasks": "^4.0.0"
   },
   "dependencies": {
     "desandro-matches-selector": "^2.0.0",
     "ev-emitter": "^1.0.0",
-    "vanilla-fitvids": "~1.1.0",
     "fizzy-ui-utils": "^2.0.0",
     "get-size": "^2.0.2",
     "highlightjs": "~9.10.0",
-    "jquery-history": "~1.0.1",
     "imagesloaded": "~4.1.1",
     "jquery": "~2.2.4",
+    "jquery-history": "~1.0.1",
     "masonry-layout": "~4.1.1",
     "normalize.css": "~5.0.0",
     "nprogress": "~0.2.0",
-    "outlayer": "^2.1.0"
+    "outlayer": "^2.1.0",
+    "vanilla-fitvids": "~1.1.0"
   }
 }
